# triple-r

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: hashmap.rs  lib.rs  string.rs  vec.rs
tests/: compile-fail.rs  random.txt  realistic-example-vec.rs
tests/ui/: 01-multiple-guards.rs  01-multiple-guards.stderr  02-guard-outlives-map.rs  02-guard-outlives-map.stderr  03-guard-is-not-send.rs  03-guard-is-not-send.stderr  04-wrong-build-hasher.rs  04-wrong-build-hasher.stderr
tests/ui-string/: 01-multiple-guards.rs  01-multiple-guards.stderr  02-guard-outlives-string.rs  02-guard-outlives-string.stderr  03-guard-is-not-send.rs  03-guard-is-not-send.stderr
tests/ui-vec/: 01-multiple-guards.rs  01-multiple-guards.stderr  02-guard-outlives-vec.rs  02-guard-outlives-vec.stderr  03-guard-is-not-send.rs  03-guard-is-not-send.stderr
